# mcp-md-pdf

./: .dockerignore  .gitignore  AFTER_GITHUB_PUSH.md  BRANCH_STRATEGY.md  CLAUDE.md  Dockerfile  Dockerfile.alpine  Dockerfile.pandoc  Dockerfile.pandoc-alpine  Dockerfile.pandoc-official  LICENSE  PUBLISHING_GUIDE.md  QUICK_SETUP_CHECKLIST.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/: RELEASE_CHECKLIST.md
.github/workflows/: publish.yml  tests.yml
docs/: DOCKER_COMPARISON.md  MARKDOWN_COVERAGE.md  WHY_NO_DOCKER.md
src/md_pdf_mcp/: __init__.py  converter.py  server.py
tests/: README.md  __init__.py  conftest.py  test_advanced_markdown.py  test_boundary_conditions.py  test_converter.py  test_error_handling.py  test_security.py  test_server.py  test_tables_advanced.py
